<resources>
    <string name="app_name">Coding Hub</string>
    <string name="title_activity_course">CourseActivity</string>
    <string name="description">This course is intended to give quite a learning knowledge for the android developers</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="no_account">Do not have an account?</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="create_account">Create account</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="confirm_password">Confirm password</string>
    <string name="menu_logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="course_detail">Course Detail</string>
    <string name="instructor_description">Oo Maung has been working in Android development for over 7 years and has been teaching since 2016.</string>
    <string name="purchase">Purchase</string>
</resources>
