<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:src="@drawable/logo"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="100dp"
        android:layout_height="100dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_email"
        style="@style/TextInputLayoutStyle"
        app:errorEnabled="true"
        android:layout_marginStart="@dimen/margin_normal"
        android:layout_marginEnd="@dimen/margin_normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_email"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="@dimen/padding_small"
            android:inputType="textEmailAddress"
            android:imeOptions="actionNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_password"
        style="@style/TextInputLayoutStyle"
        app:errorEnabled="true"
        android:layout_marginStart="@dimen/margin_normal"
        android:layout_marginEnd="@dimen/margin_normal"
        app:passwordToggleEnabled="true"
        app:passwordToggleDrawable="@drawable/ic_password_toggle"
        app:passwordToggleTint="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_password"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="@dimen/padding_small"
            android:inputType="textPassword"
            android:imeOptions="actionDone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:text="@string/forgot_password"
        android:textColor="@color/colorAccent"
        android:layout_marginEnd="@dimen/margin_normal"
        android:layout_gravity="end"
        android:padding="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sign_in"
        android:text="@string/sign_in"
        android:layout_margin="@dimen/margin_normal"
        android:padding="@dimen/padding_small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <View
        android:layout_margin="@dimen/margin_small"
        android:background="@color/grey_light"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <LinearLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/no_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/btn_sign_up"
            android:text="@string/sign_up"
            android:padding="@dimen/padding_small"
            android:textColor="@color/colorAccent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>